--- a/style.css
+++ b/style.css
@@ -2,6 +2,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
+:root{
+  /*dark mode colors*/
+  --text-color:#E3E3E3;
+  --subheading-color: #828282;
+  --placeholder-color: #A6A6A6;
+  --primary-color: #242424;
+  --secondary-color: #383838;
+  --secondary-hover-color: #444;
+
+}
+
+
 *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: "Poppins", "sans-serif";
 }
