--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", "sans-serif";
+}
+
+
 :root{
   /*dark mode colors*/
   --text-color:#E3E3E3;
@@ -12,11 +21,45 @@
   --secondary-hover-color: #444;
 
 }
+  body{
+    background: var(--primary-color);
+  }
 
+  .header, .typing-area{
+    color: var(--text-color);
+  }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", "sans-serif";
-}
+  .header{
+    margin-top: 7vh;
+    padding: 1rem;
+  }
+
+  .header :where(.title , .subtitle){
+    font-weight: 500;
+    line-height: 3.6rem;
+  }
+
+  .header .title{
+    font-size: 2.7rem;
+    width: fit-content;
+    background-clip: text; 
+    background: linear-gradient(to right, #4285f4, #d96570);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }   
+
+  .header .subtitle{
+    font-size: 2.4rem;
+    color:var(--subheading-color)
+  }
+
+  .suggestion-list{
+    margin-top: 9.5vh;
+    list-style: none;
+    display: flex;
+    gap: 1.25rem;
+  }
+
+  .suggestion-list .suggestion{
+    background: var(--secondary-color);
+  }
