--- a/style.css
+++ b/style.css
@@ -58,8 +58,41 @@
     list-style: none;
     display: flex;
     gap: 1.25rem;
+    overflow-x: auto;
+    scrollbar-width: none;
   }
 
   .suggestion-list .suggestion{
+    padding: 1.25rem;
+    cursor: pointer;
+    width: 227px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    border-radius: 0.75rem;
     background: var(--secondary-color);
   }
+  .suggestion-list .suggestion:hover{
+    background: var(--secondary-hover-color);
+  }
+  .suggestion-list .suggestion .text{
+    font-weight: 400;
+
+  }
+
+  .suggestion-list .suggestion .icon{
+    height: 42px;
+    width: 42px;
+    font-size: 1.3rem;
+    margin-top: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background:  var(--primary-color);
+  }
+
+
+
